Added mime type, removed deprecated keys

--- a/ginga.desktop
+++ b/ginga.desktop
@@ -1,8 +1,7 @@
 [Desktop Entry]
-Encoding=UTF-8
+Type=Application
 Name=Ginga
 Comment=The Ginga astronomical FITS file viewer
 Exec=ginga
-Type=Application
 Categories=Education;Science;Astronomy;
-StartupNotify=true
+MimeType=image/x-fits;
