minor tweaks to get sphinx build to not issue warnings

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -16,6 +16,10 @@ I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
 .PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
 
+#This creates the "_static" directory if it does not exist
+#it is needed  because git doesn't store empty directories
+$(shell [ -d "_static" ] || mkdir -p _static)
+
 help:
 	@echo "Please use \`make <target>' where <target> is one of"
 	@echo "  html       to make standalone HTML files"
