Updates to plugin handling
- Removed WBrowser, Debug and Log plugins from being loaded by default.
  These are now loaded from the "Help" menu.
- Unified startup/shutdown of local and global plugins via PluginManager
- Added Close buttons to WBrowser, Debug and Log plugins
- updated documentation
- Added FITSpkg and WCSpkg configuration options in general.cfg
  - these control which package you want to use for WCS and loading FITS files
- If sphinx is installed and you do a "make install" in the doc directory
    it will copy the documentation into the ginga/doc directory where it
    becomes part of the package install:
      cd doc; make install
      cd ..; python setup.py install

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -14,7 +14,7 @@ ALLSPHINXOPTS   = -d $(BUILDDIR)/doctrees $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 # the i18n builder cannot share the environment and doctrees with the others
 I18NSPHINXOPTS  = $(PAPEROPT_$(PAPER)) $(SPHINXOPTS) .
 
-.PHONY: help clean html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
+.PHONY: help clean install html dirhtml singlehtml pickle json htmlhelp qthelp devhelp epub latex latexpdf text man changes linkcheck doctest gettext
 
 #This creates the "_static" directory if it does not exist
 #it is needed  because git doesn't store empty directories
@@ -44,6 +44,9 @@ help:
 
 clean:
 	-rm -rf $(BUILDDIR)/*
+
+install:  html
+	cp -r $(BUILDDIR)/html/* ../ginga/doc/.
 
 html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
