--- a/.travis.yml
+++ b/.travis.yml
@@ -69,9 +69,9 @@ script:
   - which ginga
 
   # run unit tests
-  # this doesn't seem to work
+  # this doesn't seem to work:
   # - python${P} setup.py test
-  - nosetests ginga/tests
+  - nosetests${P} ginga/tests
 
   # build documentation
   - python${P} setup.py build_sphinx
