--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: python
 
 python:
-    - 2.7
-    - 3.3
-    - 3.4
+    #- 2.7
+    #- 3.3
+    #- 3.4
     # This is just for "egg_info".  All other builds are explicitly given in the matrix
 env:
     global:
@@ -14,8 +14,8 @@ env:
         - ASTROPY_VERSION=stable
         - CONDA_INSTALL='conda install -c astropy-ci-extras --yes'
         - PIP_INSTALL='pip install'
-    matrix:
-        - SETUP_CMD='egg_info'
+    #matrix:
+    #    - SETUP_CMD='egg_info'
 
 matrix:
     include:
