(reference viewer) updates to Cuts plugin
- referenced per github issue #131
  - changed cuts text annotations to be same color as line color
  - made cuts text annotations a preference
  - added example plugin_Cuts.cfg preferences file

- updated plugin_Contents.cfg preferences file to address github issue #130

--- a/examples/configs/plugin_Contents.cfg
+++ b/examples/configs/plugin_Contents.cfg
@@ -7,3 +7,6 @@
 # format: [(col header, keyword1), ... ]
 columns = [ ('Name', 'NAME'), ('Object', 'OBJECT'), ('Filter', 'FILTER01'), ('Date', 'DATE-OBS'), ('Time UT', 'UT'), ]
 
+# If set to True, will always expand the tree in Contents when new entries are added
+always_expand = True
+
