(reference viewer) Adds cuts legend only if preference is set

--- a/examples/configs/plugin_Cuts.cfg
+++ b/examples/configs/plugin_Cuts.cfg
@@ -9,6 +9,9 @@ select_new_cut = True
 # If set to True will label cuts with a text annotation
 label_cuts = True
 
+# If set to True will add a legend to the cuts plot
+show_cuts_legend = False
+
 # Default cut colors
 cut_colors = ['magenta', 'skyblue2', 'chartreuse2', 'cyan', 'pink', 'burlywood2', 'yellow3', 'turquoise', 'coral1', 'mediumpurple2']
 
