Added Thumbs preferences to hide labels for very long image names. Added previously undocumented thumb_length setting to config example.

--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -7,7 +7,7 @@
 # caching thumbs saves a lot of time when they need to be regenerated
 cache_thumbs = True
 
-# cache location-- "local" puts them in a .thumbs subfolder, otherwise 
+# cache location-- "local" puts them in a .thumbs subfolder, otherwise
 # they are cached in ~/.ginga/thumbs
 cache_location = 'local'
 
@@ -26,6 +26,13 @@ tt_keywords = ['OBJECT', 'FRAMEID', 'UT', 'DATE-OBS']
 # there is ongoing adjustment of the image
 rebuild_wait = 4.0
 
+# Max length of thumb on the long side
+thumb_length = 150
+
 # Sort the thumbs alphabetically
 #sort_order = 'alpha'
 sort_order = None
+
+# Hide thumbnail labels (recommended for very long image names)
+label_name = False
+mouseover_name_key = 'NAME'
