Corrected verbiage in Thumbs and Contents config files. Changed Contents to manage highlights like Thumbs. Changed Contents log warning to error if highlight fails. Added user preference to set highlight text color. For both Contents and Thumbs, added highlighting logic to handle deleting image and channel. There is no need to have channel name all lowercase in thumbkey. Added documentation about channel sort order preference.

--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -42,7 +42,7 @@ label_length = 25
 # Cut off long label ('left' or 'right')
 label_cutoff = 'right'
 
-# Default is for Thumbs to highlight images that are displayed in channels.
+# Option to highlight images that are displayed in channels.
 # If set to True this option will only highlight the image that is in the
 # channel with the keyboard focus
 highlight_tracks_keyboard_focus = False
