--- a/ginga/examples/configs/channel_Image.cfg
+++ b/ginga/examples/configs/channel_Image.cfg
@@ -103,6 +103,12 @@ numImages = 10
 follow_focus = True
 
 # ---------------
+# General - Listed here but has nothing to do with general.cfg
+
+# Sort channel history ('loadtime' or 'alpha')
+sort_order = 'alpha'
+
+# ---------------
 # Remember - When set to True, GUI remembers the settings for each image
 
 profile_use_scale = False
