--- a/ginga/examples/configs/plugin_Contents.cfg
+++ b/ginga/examples/configs/plugin_Contents.cfg
@@ -10,7 +10,7 @@ columns = [ ('Name', 'NAME'), ('Object', 'OBJECT'), ('Filter', 'FILTER01'), ('Da
 # If set to True, will always expand the tree in Contents when new entries are added
 always_expand = True
 
-# Default is for Contents to highlight images that are displayed in channels.
+# Option to highlight images that are displayed in channels.
 # If set to True this option will only highlight the image that is in the
 # channel with the keyboard focus
 highlight_tracks_keyboard_focus = False
@@ -18,3 +18,6 @@ highlight_tracks_keyboard_focus = False
 # If True, color every other row in alternating shades to improve
 # readability of long tables
 color_alternate_rows = True
+
+# Highlighted row colors (in addition to bold text)
+row_font_color = 'green'
