Replaced no label with configurable label length with option to cut off front or back of image name. NAME is now mandatory in tooltop for simplicity.

--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -21,6 +21,9 @@ auto_scroll = True
 # Keywords to extract and show if we mouse over the thumbnail
 tt_keywords = ['OBJECT', 'FRAMEID', 'UT', 'DATE-OBS']
 
+# Mandatory unique image identifier in tooltip
+mouseover_name_key = 'NAME'
+
 # How many seconds to wait after an image is altered to begin trying
 # to rebuild a matching thumb.  Usually a few seconds is good in case
 # there is ongoing adjustment of the image
@@ -33,6 +36,8 @@ thumb_length = 150
 #sort_order = 'alpha'
 sort_order = None
 
-# Hide thumbnail labels (recommended for very long image names)
-label_name = False
-mouseover_name_key = 'NAME'
+# Thumbnail label length in num of characters (None = no limit)
+label_length = 25
+
+# Cut off long label ('front' or 'back')
+label_cutoff = 'front'
