Highlight active image in Thumbs. Added user color preferences for Thumbs highlight.

--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -41,3 +41,7 @@ label_length = 25
 
 # Cut off long label ('left' or 'right')
 label_cutoff = 'right'
+
+# Highlighted label colors
+label_bg_color = 'yellow'
+label_font_color = 'black'
