Some small updates, fixes and cleanup to PR#185
- make name mangling a function in iohelper
- fixed ThumbsBase so that when thumbnail is updated it doesn't lose
  the name in the tooltip metadata
- changed preference for 'label_cutoff' to be "left" or "right"

--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -39,5 +39,5 @@ sort_order = None
 # Thumbnail label length in num of characters (None = no limit)
 label_length = 25
 
-# Cut off long label ('front' or 'back')
-label_cutoff = 'front'
+# Cut off long label ('left' or 'right')
+label_cutoff = 'right'
