Added channel config file example

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -14,7 +14,7 @@ channelFollowsFocus = False
 # Show startup banner (automatically set after first run)
 showBanner = False
 
-# Number of images to keep in memory per channel
+# Number of images to keep in memory per channel (0 = unlimited)
 numImages = 10
 
 # Share the readout widget between channels
