Added clarifications from Eric J. Corrected typo in general.cfg.

--- a/ginga/examples/configs/channel_Image.cfg
+++ b/ginga/examples/configs/channel_Image.cfg
@@ -19,14 +19,29 @@ color_algorithm = 'linear'
 # Color Mapping
 
 color_map = 'gray'
-color_hashsize = 65535
 intensity_map = 'ramp'
+
+# In most cases, with the default value of the hash size as high as it is and
+# the limitation of current displays, there is no need for the user to set this
+# value.
+#
+# As the hash size grows smaller, and depending on the values in the image, the
+# cut levels, and the color distribution algorithm (linear, log, etc.), distinct
+# image values will be hashed into the same buckets, so subtle gradations could
+# show up as posterization in the image, especially with the standard rgbmapper
+# mapping to 24 bpp displays.
+#
+color_hashsize = 65535
 
 # ---------------
 # Auto Cuts
-
+#
+# Stores parameters specific to the chosen autocut_method. For example:
+#   autocut_method = 'histogram'
+#   autocut_params = [('usecrop', True), ('numbins', 2048), ('pct', 0.993)]
+#
 autocut_method = 'zscale'
-autocut_params = {}
+autocut_params = []
 cuts = (0.0, 0.0)
 
 # ---------------
@@ -58,7 +73,10 @@ interpolation = 'basic'
 
 # ---------------
 # Panning
-
+#
+# If pan_coord is set to 'wcs', the pan position cannot exist in sexagesimal
+# format in the config file.
+#
 pan = (1.0, 1.0)
 pan_coord = 'data'
 show_pan_position = False
@@ -81,12 +99,8 @@ genthumb = True
 numImages = 10
 
 # Channel focus follows window focus
-# Same as channelFollowsFocus in general.cfg???
+# Same as channel_follows_focus in general.cfg
 follow_focus = True
-
-# Preference for fixed and sans fonts
-# Same as sansFont in general.cfg???
-onscreen_ff = 'Sans Serif'
 
 # ---------------
 # Remember - When set to True, GUI remembers the settings for each image
@@ -109,7 +123,16 @@ icc_black_point_compensation = False
 # ---------------
 # Miscellaneous
 
+# Preference for fixed and sans fonts
+# Font used for onscreen messages (zoom, etc.)
+onscreen_ff = 'Sans Serif'
+
+# Ensure that RGB images are properly flipped in Y on load
+# (e.g., a JPEG image). Not applicable to FITS.
 auto_orient = True
+
+# Performance will be terrible if set to False, but doing so is useful
+# for debugging the core widget and some special backends.
 defer_redraw = True
 defer_lagtime = 0.025
 
