--- a/.travis.yml
+++ b/.travis.yml
@@ -56,9 +56,8 @@ before_install:
     # future changes
     - export PYTHONIOENCODING=UTF8
     - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-    - chmod +x miniconda.sh
-    - ./miniconda.sh -b
-    - export PATH=/home/travis/miniconda/bin:$PATH
+    - bash miniconda.sh -b -p $HOME/miniconda
+    - export PATH="$HOME/miniconda/bin:$PATH"
     - conda update --yes conda
 
     # DOCUMENTATION DEPENDENCIES
