(reference viewer) Added preference to track keyboard focus in Contents
- new preference "highlight_tracks_keyboard_focus" added to Contents

--- a/ginga/examples/configs/plugin_Contents.cfg
+++ b/ginga/examples/configs/plugin_Contents.cfg
@@ -10,3 +10,8 @@ columns = [ ('Name', 'NAME'), ('Object', 'OBJECT'), ('Filter', 'FILTER01'), ('Da
 # If set to True, will always expand the tree in Contents when new entries are added
 always_expand = True
 
+# Default is for Contents to highlight images that are displayed in channels.
+# If set to True this option will only highlight the image that is in the
+# channel with the keyboard focus
+highlight_tracks_keyboard_focus = False
+
