(reference viewer) Add preference for alternating row color scheme
- to Contents, FBrowser and Header plugins

--- a/ginga/examples/configs/plugin_Contents.cfg
+++ b/ginga/examples/configs/plugin_Contents.cfg
@@ -15,3 +15,6 @@ always_expand = True
 # channel with the keyboard focus
 highlight_tracks_keyboard_focus = False
 
+# If True, color every other row in alternating shades to improve
+# readability of long tables
+color_alternate_rows = True
