--- a/ginga/examples/configs/plugin_FBrowser.cfg
+++ b/ginga/examples/configs/plugin_FBrowser.cfg
@@ -24,5 +24,9 @@ keywords = [ ('object', 'OBJECT'), ('date_obs', 'DATE-OBS'), ('time_ut', 'UT'), 
 #columns = [('Name', 'name'), ('Size', 'st_size_str'), ('Mode', 'st_mode_oct'), ('Last Changed', 'st_mtime_str') ]
 columns = [('Name', 'name'), ('Object', 'object'), ('Date Obs', 'date_obs'), ('Time Obs', 'time_ut'), ('Size', 'st_size_str'), ('Mode', 'st_mode_oct'), ('Last Changed', 'st_mtime_str') ]
 
+# If True, color every other row in alternating shades to improve
+# readability of long tables
+color_alternate_rows = True
+
 #END
 
