--- a/ginga/examples/configs/plugin_Header.cfg
+++ b/ginga/examples/configs/plugin_Header.cfg
@@ -6,3 +6,7 @@
 # Sort header
 sortable = True
 #sortable = False
+
+# If True, color every other row in alternating shades to improve
+# readability of long tables
+color_alternate_rows = True
