--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -42,6 +42,11 @@ label_length = 25
 # Cut off long label ('left' or 'right')
 label_cutoff = 'right'
 
+# Default is for Thumbs to highlight images that are displayed in channels.
+# If set to True this option will only highlight the image that is in the
+# channel with the keyboard focus
+highlight_tracks_keyboard_focus = False
+
 # Highlighted label colors
 label_bg_color = 'yellow'
 label_font_color = 'black'
