Fixed doc warnings. Spiced up Sphinx conf a little. Added prototype of API doc (just to get modindex to work). Removed empty Search page (there is already a search box on top left menu). Cleaned up WCS in-code doc for API doc. Added canvas doc that was previously (accidentally) excluded.

--- a/.travis.yml
+++ b/.travis.yml
@@ -104,6 +104,8 @@ install:
     # currently 2.7, so that's fine
     - if [[ $SETUP_CMD == build_sphinx* ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION Sphinx matplotlib; fi
     - if [[ $SETUP_CMD == build_sphinx* ]]; then $PIP_INSTALL linkchecker; fi
+    # This is needed for API autodoc
+    - if [[ $SETUP_CMD == build_sphinx* ]]; then $PIP_INSTALL numpydoc; fi
 
     # COVERAGE DEPENDENCIES
     - if [[ $SETUP_CMD == 'test --coverage' ]]; then $PIP_INSTALL coverage coveralls; fi
