Refactored workspaces so that they can morph types

--- a/ginga/examples/configs/channel_Image.cfg
+++ b/ginga/examples/configs/channel_Image.cfg
@@ -92,15 +92,14 @@ raisenew = True
 genthumb = True
 
 # ---------------
-# General - Inherits from general.cfg if not specified, otherwise overwrite.
+# General 
 
 # Number of images to keep in memory per channel (0 = unlimited)
 # Same as numImages in general.cfg
 numImages = 10
 
-# Channel focus follows window focus
-# Same as channel_follows_focus in general.cfg
-follow_focus = True
+# Viewer will be focused when the mouse enters the window
+enter_focus = False
 
 # ---------------
 # Remember - When set to True, GUI remembers the settings for each image
