--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -9,8 +9,8 @@ sansFont = 'Sans Serif'
 useMatplotlibColormaps = True
 
 # Channel focus follows window focus
-# This is overwritten by follow_focus in channel_Image.cfg, if exists
-channel_follows_focus = False
+# True is recommended
+channel_follows_focus = True
 
 # Show startup banner (automatically set after first run)
 showBanner = False
