Updated example config for Cuts

--- a/ginga/examples/configs/plugin_Cuts.cfg
+++ b/ginga/examples/configs/plugin_Cuts.cfg
@@ -6,11 +6,17 @@
 # If set to True will always select a cut after drawing it
 select_new_cut = True
 
+# If set to True will automatically change to "move" mode after draw
+draw_then_move = True
+
 # If set to True will label cuts with a text annotation
 label_cuts = True
 
 # If set to True will add a legend to the cuts plot
 show_cuts_legend = False
+
+# If set to True will add Slit tab
+enable_slit = False
 
 # Default cut colors
 cut_colors = ['magenta', 'skyblue2', 'chartreuse2', 'cyan', 'pink', 'burlywood2', 'yellow3', 'turquoise', 'coral1', 'mediumpurple2']
