(reference viewer) Updates to Thumbs, Contents and FBrowser
- moved preload optimization from Thumbs into channels internals
- updated Thumbs and Contents to not generate image_future
- FBrowser updated to use channels to prepopulate thumbnails

--- a/ginga/examples/configs/channel_Image.cfg
+++ b/ginga/examples/configs/channel_Image.cfg
@@ -143,3 +143,8 @@ defer_lagtime = 0.025
 
 # To be deprecated
 image_overlays = True
+
+# anticipatory preloading of images may shorten wait time when
+# switching between adjacent images
+preload_images = False
+
