Implemented image-modified callback. Updated Contents to display modified status. Some doc updates. Updated Contents config file example to include MODIFIED column. Bug fix for add-image-info callback (see comments for 17c6e7d3f). Bug fix for advertise_image() in Control that was not passing in the correct image key.

--- a/ginga/examples/configs/plugin_Contents.cfg
+++ b/ginga/examples/configs/plugin_Contents.cfg
@@ -3,9 +3,9 @@
 #
 # Place this in file under ~/.ginga with the name "plugin_Contents.cfg"
 
-# columns to show from metadata
+# columns to show from metadata -- NAME and MODIFIED recommended
 # format: [(col header, keyword1), ... ]
-columns = [ ('Name', 'NAME'), ('Object', 'OBJECT'), ('Filter', 'FILTER01'), ('Date', 'DATE-OBS'), ('Time UT', 'UT'), ]
+columns = [ ('Name', 'NAME'), ('Object', 'OBJECT'), ('Filter', 'FILTER01'), ('Date', 'DATE-OBS'), ('Time UT', 'UT'), ('Modified', 'MODIFIED')]
 
 # If set to True, will always expand the tree in Contents when new entries are added
 always_expand = True
