(reference viewer) Fix for Colorbar plugin
- fixed a bug where the color bar did not track changes when the color map
  was changed in the channel

--- a/ginga/examples/configs/plugin_Cuts.cfg
+++ b/ginga/examples/configs/plugin_Cuts.cfg
@@ -21,3 +21,6 @@ enable_slit = False
 # Default cut colors
 cut_colors = ['magenta', 'skyblue2', 'chartreuse2', 'cyan', 'pink', 'burlywood2', 'yellow3', 'turquoise', 'coral1', 'mediumpurple2']
 
+# If set to True, will update graph continuously as cursor is dragged
+# around image
+drag_update = False
