(reference viewer) small updates to plugins
- updated Pick plugin to better work with web widgets
- added option to Operations plugin for alternate control of local plugin
    launching
- updates to Remote Control plugin for viewing buffers

--- a/ginga/examples/configs/plugin_Operations.cfg
+++ b/ginga/examples/configs/plugin_Operations.cfg
@@ -9,4 +9,7 @@ show_channel_control = True
 # Color to highlight focused plugins in the operations control tray
 focuscolor = "lightgreen"
 
+# Change to False to use combobox+button launch approach
+use_popup_menu = True
+
 #END
