Allow Contents to resize columns to fit to contents

--- a/ginga/examples/configs/plugin_Contents.cfg
+++ b/ginga/examples/configs/plugin_Contents.cfg
@@ -21,3 +21,6 @@ color_alternate_rows = True
 
 # Highlighted row colors (in addition to bold text)
 row_font_color = 'green'
+
+# Maximum number of rows that will turn off auto column resizing (for speed)
+max_rows_for_col_resize = 100
