Use a new user pref for FBrowser col resize

--- a/ginga/examples/configs/plugin_FBrowser.cfg
+++ b/ginga/examples/configs/plugin_FBrowser.cfg
@@ -10,7 +10,7 @@ home_path = None
 # listing (slow for large numbers of files)
 scan_fits_headers = True
 
-# If the number of files in the listing is greater than this, don't do 
+# If the number of files in the listing is greater than this, don't do
 # a scan on the headers
 scan_limit = 1000
 
@@ -27,6 +27,9 @@ columns = [('Name', 'name'), ('Object', 'object'), ('Date Obs', 'date_obs'), ('T
 # If True, color every other row in alternating shades to improve
 # readability of long tables
 color_alternate_rows = True
+
+# Maximum number of rows that will turn off auto column resizing (for speed)
+max_rows_for_col_resize = 5000
 
 #END
 
