Enable auto col resize for Header

--- a/ginga/examples/configs/plugin_Header.cfg
+++ b/ginga/examples/configs/plugin_Header.cfg
@@ -10,3 +10,6 @@ sortable = True
 # If True, color every other row in alternating shades to improve
 # readability of long tables
 color_alternate_rows = True
+
+# Maximum number of rows that will turn off auto column resizing (for speed)
+max_rows_for_col_resize = 5000
