Added option to also include channel name in the suffix and updated relevant doc. Added a reminder to move SaveImage to File menu when the capability is added. Updated screenshot. Rearranged GUI a little. Fixed Sphinx warning. TVMask doc now links to SaveImage page properly. Fixed some methods not grabbing the correct channel info. Shorten filenames on status widget as not to stretch out plugin widget width. Removed unnecessary method and grab image names directly from datasrc.

--- a/ginga/examples/configs/plugin_SaveImage.cfg
+++ b/ginga/examples/configs/plugin_SaveImage.cfg
@@ -7,6 +7,10 @@
 output_directory = '.'
 output_suffix = 'ginga'
 
+# Include channel name in the suffix.
+# If False, only output_suffix is used regardless of channel.
+include_chname = True
+
 # Clobber existing output files or not
 clobber = False
 
