Fixed typo to properly ignore notebook checkpoints.

--- a/.gitignore
+++ b/.gitignore
@@ -49,7 +49,7 @@ develop-eggs
 distribute-*.tar.gz
 
 # IPython notebook (Jupyter) checkpoints
-+.ipynb_checkpoints
+.ipynb_checkpoints
 
 # Other
 .cache
