--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: python
 
+python:
+    - 2.7
+    - 3.4
+    - 3.5
+
 # Setting sudo to false opts in to Travis-CI container-based builds.
 sudo: false
 
-# The apt packages below are needed for sphinx builds, which can no longer
-# be installed with sudo apt-get.
+# The apt packages below are needed for sphinx builds. A full list of packages
+# that can be included can be found here:
+#
+# https://github.com/travis-ci/apt-package-whitelist/blob/master/ubuntu-precise
+
 addons:
     apt:
         packages:
@@ -12,26 +20,27 @@ addons:
             - texlive-latex-extra
             - dvipng
 
-python:
-    #- 2.7
-    #- 3.4
-    #- 3.5
-    # This is just for "egg_info".  All other builds are explicitly given in the matrix
 env:
     global:
         # The following versions are the 'default' for tests, unless
         # overidden underneath. They are defined here in order to save having
         # to repeat them for all configurations.
-        - NUMPY_VERSION=1.10
-        - CONDA_INSTALL='conda install -c astropy-ci-extras --yes'
-        - PIP_INSTALL='pip install'
-
+        - NUMPY_VERSION=stable
+        - SETUP_CMD='test'
+        - PIP_DEPENDENCIES=''
+        # *** TODO: We should test the various GUI toolkits that ginga supports
+        # on travis-ci ... probably one build for Python 2 / 3 and each toolkit
+        # https://ginga.readthedocs.io/en/latest/install.html#dependences
+        - CONDA_DEPENDENCIES='pyqt'
         # Use dev version until astropy/astropy#4748 is in stable version (1.2)
         #- ASTROPY_VERSION=stable
         - ASTROPY_VERSION=development
 
-    #matrix:
-    #    - SETUP_CMD='egg_info'
+    matrix:
+        # Make sure that egg_info works without dependencies
+        - SETUP_CMD='egg_info'
+        # Try all python versions with the latest numpy
+        - SETUP_CMD='test'
 
 matrix:
     include:
@@ -51,73 +60,60 @@ matrix:
         # Try Astropy development version
         # NOTE: Uncomment this if global version is stable, not dev
         #- python: 2.7
-        #  env: ASTROPY_VERSION=development SETUP_CMD='test'
+        #  env: ASTROPY_VERSION=development
         #- python: 3.5
-        #  env: ASTROPY_VERSION=development SETUP_CMD='test'
-
-        # Try all python versions with the latest numpy
-        - python: 2.7
-          env: SETUP_CMD='test'
-        - python: 3.4
-          env: SETUP_CMD='test'
-        - python: 3.5
-          env: SETUP_CMD='test'
+        #  env: ASTROPY_VERSION=development
+        #- python: 2.7
+        #  env: ASTROPY_VERSION=lts
+        #- python: 3.5
+        #  env: ASTROPY_VERSION=lts
 
         # Try older numpy versions
         - python: 2.7
-          env: NUMPY_VERSION=1.7 SETUP_CMD='test'
+          env: NUMPY_VERSION=1.9
+        - python: 2.7
+          env: NUMPY_VERSION=1.8
+        - python: 2.7
+          env: NUMPY_VERSION=1.7
+
+        # Try numpy pre-release
+        - python: 3.5
+          env: NUMPY_VERSION=prerelease
 
 before_install:
 
-    # Use utf8 encoding. Should be default, but this is insurance against
-    # future changes
-    - export PYTHONIOENCODING=UTF8
-    - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-    - bash miniconda.sh -b -p $HOME/miniconda
-    - export PATH="$HOME/miniconda/bin:$PATH"
-    - conda update --yes conda
+    # If there are matplotlib tests, comment these out to
+    # Make sure that interactive matplotlib backends work
+    # - export DISPLAY=:99.0
+    # - sh -e /etc/init.d/xvfb start
 
 install:
 
-    # CONDA
-    - conda create --yes -n test -c astropy-ci-extras python=$TRAVIS_PYTHON_VERSION
-    - source activate test
+    # We now use the ci-helpers package to set up our testing environment.
+    # This is done by using Miniconda and then using conda and pip to install
+    # dependencies. Which dependencies are installed using conda and pip is
+    # determined by the CONDA_DEPDENDENCIES and PIP_DEPENDENCIES variables,
+    # which should be space-delimited lists of package names. See the README
+    # in https://github.com/astropy/ci-helpers for information about the full
+    # list of environment variables that can be used to customize your
+    # environment. In some cases, ci-helpers may not offer enough flexibility
+    # in how to install a package, in which case you can have additional
+    # commands in the install: section below.
 
-    # CORE DEPENDENCIES
-    - if [[ $SETUP_CMD != egg_info ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION pytest pip Cython jinja2; fi
-    - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL pytest-xdist; fi
+    - git clone git://github.com/astropy/ci-helpers.git
+    - source ci-helpers/travis/setup_conda_$TRAVIS_OS_NAME.sh
 
-    # ASTROPY
-    - if [[ $SETUP_CMD != egg_info ]] && [[ $ASTROPY_VERSION == development ]]; then $PIP_INSTALL git+http://github.com/astropy/astropy.git#egg=astropy; fi
-    - if [[ $SETUP_CMD != egg_info ]] && [[ $ASTROPY_VERSION == stable ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION astropy; fi
-
-    # OPTIONAL DEPENDENCIES
-    # Here you can add any dependencies your package may have. You can use
-    # conda for packages available through conda, or pip for any other
-    # packages. You should leave the `numpy=$NUMPY_VERSION` in the `conda`
-    # install since this ensures Numpy does not get automatically upgraded.
-
-    # *** TODO: We should test the various GUI toolkits that ginga supports
-    # on travis-ci ... probably one build for Python 2 / 3 and each toolkit
-    # https://ginga.readthedocs.io/en/latest/install.html#dependences
-    - if [[ $SETUP_CMD != egg_info ]]; then $CONDA_INSTALL pyqt ; fi
-    # - if [[ $SETUP_CMD != egg_info ]]; then $PIP_INSTALL ...; fi
-
-    # DOCUMENTATION DEPENDENCIES
-    # build_sphinx needs sphinx and matplotlib (for plot_directive). Note that
-    # this matplotlib will *not* work with py 3.x, but our sphinx build is
-    # currently 2.7, so that's fine
-    - if [[ $SETUP_CMD == build_sphinx* ]]; then $CONDA_INSTALL numpy=$NUMPY_VERSION Sphinx matplotlib; fi
-    - if [[ $SETUP_CMD == build_sphinx* ]]; then $PIP_INSTALL linkchecker; fi
-    # This is needed for API autodoc
-    - if [[ $SETUP_CMD == build_sphinx* ]]; then $PIP_INSTALL numpydoc; fi
-
-    # COVERAGE DEPENDENCIES
-    - if [[ $SETUP_CMD == 'test --coverage' ]]; then $PIP_INSTALL coverage coveralls; fi
+    # As described above, using ci-helpers, you should be able to set up an
+    # environment with dependencies installed using conda and pip, but in some
+    # cases this may not provide enough flexibility in how to install a
+    # specific dependency (and it will not be able to install non-Python
+    # dependencies). Therefore, you can also include commands below (as
+    # well as at the start of the install section or in the before_install
+    # section if they are needed before setting up conda) to install any
+    # other dependencies.
 
 script:
    - python setup.py $SETUP_CMD
-   - if [[ $SETUP_CMD == build_sphinx* ]]; then linkchecker doc/_build/html/index.html; fi
 
 after_success:
     # If coveralls.io is set up for this package, uncomment the line
