--- a/.travis.yml
+++ b/.travis.yml
@@ -70,6 +70,8 @@ matrix:
 
         # Try older numpy versions
         - python: 2.7
+          env: NUMPY_VERSION=1.10
+        - python: 2.7
           env: NUMPY_VERSION=1.9
         - python: 2.7
           env: NUMPY_VERSION=1.8
