Add file name to exec
This allows to use the desktop file to handle the file types that are actually specified by the mime tye.

--- a/ginga.desktop
+++ b/ginga.desktop
@@ -2,6 +2,6 @@
 Type=Application
 Name=Ginga
 Comment=The Ginga astronomical FITS file viewer
-Exec=ginga
+Exec=ginga %F
 Categories=Education;Science;Astronomy;
 MimeType=image/x-fits;
