Rollup of small fixes
- added workaround to the reference viewer for slow coordinate conversion
  in astropy affecting mouse cursor tracking functions
- added option in io_fits.py for explicitly opening with memmap support
  or not
- updated quickref documentation for recent changes
- bumped release

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -25,6 +25,9 @@ shareReadout = True
 # Inherit keywords from the primary header when loading HDUs
 inherit_primary_header = False
 
+# Interval for updating the field information under the cursor (sec)
+cursor_interval = 0.050
+
 # Force a widget set
 # Possibilities are 'choose', 'gtk2', 'qt4', 'qt5' or 'pyside'
 widgetSet = 'choose'
