--- a/setup.cfg
+++ b/setup.cfg
@@ -45,3 +45,5 @@ test_suite = ginga.tests.ginga_test_suite
 
 [entry_points]
 ginga = ginga.main:_main
+ggrc = ginga.misc.grc:_main
+fits2pdf = ginga.util.fits2pdf:_main
