Pan image now resizes to fit the window when rotated or axes swapped
- also added options to not rotate Pan or Zoom images if channel image
  is rotated.
- updated plugin config file examples

--- a/ginga/examples/configs/plugin_Pan.cfg
+++ b/ginga/examples/configs/plugin_Pan.cfg
@@ -15,5 +15,8 @@ pan_rectangle_color = 'red'
 # color of compass
 compass_color = 'skyblue'
 
+# rotate the pan image if the main image is rotated?
+rotate_pan_image = True
+
 
 #END
