--- a/ginga/examples/configs/plugin_Zoom.cfg
+++ b/ginga/examples/configs/plugin_Zoom.cfg
@@ -13,4 +13,7 @@ zoom_amount = 3
 # NOTE: usually a small delay speeds things up
 refresh_interval = 0.02
 
+# rotate the zoom image if the main image is rotated?
+rotate_zoom_image = True
+
 #END
