--- a/setup.cfg
+++ b/setup.cfg
@@ -26,7 +26,7 @@ license = BSD
 url = http://ejeschke.github.com/ginga
 edit_on_github = False
 github_project = ejeschke/ginga/
-version = 2.5.20161113213300
+version = 2.6.0
 keywords = scientific image viewer numpy toolkit astronomy FITS
 classifiers =
     Intended Audience :: Science/Research,
