Change entry point to point to new main location

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,5 +43,5 @@ classifiers =
 test_suite = ginga.tests.ginga_test_suite
 
 [entry_points]
-ginga = ginga.main:_main
+ginga = ginga.rv.main:_main
 ggrc = ginga.misc.grc:_main
