Reference viewer can/save restore size and position
- Improved Pick plugin: nicer contour plot, pick log uses table widget,
  pick log saved as a FITS table HDU
- Pick and Zoom plugins can now use a specific color map, rather than
  always using the same one as the channel window
- gtk3 reference viewer can now be resized smaller than the original
  layout (gtk2 still cannot)
- added ability to save the reference viewer size, layout and position
  on screen
- gtk MDI windows now remember their size and location when toggling
  workspace types

--- a/ginga/examples/configs/plugin_Pick.cfg
+++ b/ginga/examples/configs/plugin_Pick.cfg
@@ -17,6 +17,7 @@ max_side = 1024
 num_contours = 8
 # How big of a radius are we willing to consider from the center of the
 # pick?  bigger numbers == slower
+contour_size_min = 10
 contour_size_limit = 70
 
 # Star candidate search parameters
@@ -36,6 +37,10 @@ show_candidates = False
 # Defaults for delta cut levels (in Controls tab)
 delta_sky = 0.0
 delta_bright = 0.0
+
+# use a different color/intensity map than channel image?
+pick_cmap_name = None
+pick_imap_name = None
 
 # For Reports tab
 record_picks = True
