--- a/ginga/examples/configs/plugin_Zoom.cfg
+++ b/ginga/examples/configs/plugin_Zoom.cfg
@@ -13,7 +13,14 @@ zoom_amount = 3
 # NOTE: usually a small delay speeds things up
 refresh_interval = 0.02
 
-# rotate the zoom image if the main image is rotated?
+# rotate the zoom image if the channel image is rotated?
 rotate_zoom_image = True
+
+# use a different color map than channel image?
+zoom_cmap_name = None
+
+# use a different intensity map than channel image?
+zoom_imap_name = None
+
 
 #END
