Add an optional focus indicator
- added a canvas type called FocusIndicator which indicates when the
  widget has the focus by showing a dashed rectangle around the edge
  of the window.  Currently it is disabled by default.
- Examples in .../ginga/examples/qt/example2_qt.py and others
- Set "focus_indicator=True" in your .ginga/channel_Image.cfg to turn
  it on for the reference viewer

--- a/ginga/examples/configs/channel_Image.cfg
+++ b/ginga/examples/configs/channel_Image.cfg
@@ -101,6 +101,9 @@ numImages = 10
 # Viewer will be focused when the mouse enters the window
 enter_focus = False
 
+# Viewer will show a dotted focus indicator when the window has the focus
+focus_indicator = False
+
 # ---------------
 # General - Table viewer settings
 
