Add bg and fg colors to the viewer preferences

--- a/ginga/examples/configs/channel_Image.cfg
+++ b/ginga/examples/configs/channel_Image.cfg
@@ -140,6 +140,12 @@ icc_black_point_compensation = False
 # Preference for fixed and sans fonts
 # Font used for onscreen messages (zoom, etc.)
 onscreen_ff = 'Sans Serif'
+onscreen_font_size = 24
+
+# Foreground (onscreen message) and background colors
+# you can specify name, (r, g, b) triplet or hex format
+color_fg = "#D0F0E0"
+color_bg = "#404040"
 
 # Ensure that RGB images are properly flipped in Y on load
 # (e.g., a JPEG image). Not applicable to FITS.
