Refactor Blink plugin as global or local
Works around an issue where two blink plugins running as local plugins
try to cycle through the channels concurrently.  Now, if the plugin is
started as a local plugin, it works within the channel, and if started
as a global, it works across channels.

- Also added documentation
- Updated plugin configuration file
- Changed to use the new help screen

--- a/ginga/examples/configs/plugin_Blink.cfg
+++ b/ginga/examples/configs/plugin_Blink.cfg
@@ -4,5 +4,12 @@
 # Place this in file under ~/.ginga with the name "plugin_Blink.cfg"
 
 # Blink channels instead of images within a channel
+# PLEASE NOTE: this option is DEPRECATED
 blink_channels = False
+
+# the maximum interval for a blink
+interval_max = 30.0
+
+# the minimum interval for a blink
+interval_min = 0.25
 
