Enhancements to the Pick plugin
- Added ability to make shapes besides rectangles for enclosing pick area.
  Masks out unwanted pixels.  Choose the shape in the Settings tab.
- Changed behavior of pick log to only write the log when the user clicks
  the save button.
- Changed the name of the save button to "Save as FITS table" to make it
  clear what is being written.
- If "Show candidates" is selected in Settings, then ALL of the candidates
  are saved to the log.

--- a/ginga/examples/configs/plugin_Pick.cfg
+++ b/ginga/examples/configs/plugin_Pick.cfg
@@ -4,6 +4,7 @@
 # Place this in file under ~/.ginga with the name "plugin_Pick.cfg"
 
 color_pick = 'green'
+shape_pick = 'box'
 color_candidate = 'purple'
 
 # Offset to add to Pick results. Default is 1.0 for FITS like indexing,
@@ -44,9 +45,6 @@ pick_imap_name = None
 
 # For Reports tab
 record_picks = True
-
-# Set to True to record your pick report to a log file
-report_to_log = True
 
 # Set this to a file name, if None a filename will be automatically chosen
 report_log_path = None
