--- a/ginga/examples/configs/plugin_Pick.cfg
+++ b/ginga/examples/configs/plugin_Pick.cfg
@@ -35,6 +35,10 @@ edge_width = 0.01
 # Graphically indicate all possible considered candidates
 show_candidates = False
 
+# Center of object is based on FWHM ("fwhm") or centroid ("centroid")
+# calculation:
+calc_center_alg = 'centroid'
+
 # Defaults for delta cut levels (in Controls tab)
 delta_sky = 0.0
 delta_bright = 0.0
