--- a/ginga/examples/configs/plugin_Pick.cfg
+++ b/ginga/examples/configs/plugin_Pick.cfg
@@ -39,6 +39,9 @@ show_candidates = False
 # calculation:
 calc_center_alg = 'centroid'
 
+# Fitting function to use for FWHM ("gaussian" or "moffat")
+calc_fwhm_alg = 'gaussian'
+
 # Defaults for delta cut levels (in Controls tab)
 delta_sky = 0.0
 delta_bright = 0.0
