Disable pytest-warnings

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ show-response = 1
 [pytest]
 minversion = 2.2
 norecursedirs = build doc/_build
+addopts = -p no:warnings
 
 [ah_bootstrap]
 auto_use = True
