Add shorten_name() back into Thumbs plugin

--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -28,6 +28,9 @@ rebuild_wait = 4.0
 # Max length of thumb on the long side
 thumb_length = 150
 
+# Separation between thumbs in pixels
+thumb_sep = 15
+
 # Sort the thumbs alphabetically
 #sort_order = 'alpha'
 sort_order = None
@@ -35,7 +38,7 @@ sort_order = None
 # Thumbnail label length in num of characters (None = no limit)
 label_length = 25
 
-# Cut off long label ('left' or 'right')
+# Cut off long label ('left', 'right' or None)
 label_cutoff = 'right'
 
 # Option to highlight images that are displayed in channels.
