Updates for changes to Pil.ImageCms module
- updates to handle changes to flags in PIL.ImageCms module
- generalized RGBMapper so that it doesn't assume 8-bit processing
- added "icc_working_profile" option to general settings (no more
    need for symbolic link "working" to the working profile)
- small clean ups

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -1,4 +1,7 @@
 # General preferences for Ginga
+#
+# Place this in file under ~/.ginga with the name "general.cfg"
+#
 
 # Preference for fixed and sans fonts
 fixedFont = 'Monospace'
@@ -60,3 +63,6 @@ FITSpkg = 'choose'
 # package that Ginga uses in certain situations.  Best to increase it a bit.
 recursion_limit = 3000
 
+# Set this to the file prefix of an RGB ICC working profile if you have
+# one in your ~/.ginga/profiles directory
+icc_working_profile = "sRGB"
