Fixes for window corruption on certain expose events
- fixes for window corruption on certain expose events with Qt backend
- changes to default gesture handling (mostly Qt backend)
  - now adds default binding for pinch zoom
  - differentiates scrolling by mouse from "two finger" trackpad scroll
    - latter is now handled as a pan gesture
  - greatly improves usability on laptops with track pads
  - add pinch handing to Pan plugin and ColorBar widgets

--- a/ginga/examples/configs/channel_Image.cfg
+++ b/ginga/examples/configs/channel_Image.cfg
@@ -163,3 +163,6 @@ image_overlays = True
 # switching between adjacent images
 preload_images = False
 
+# create scroll bars in channel image viewer
+# acceptable values are: 'off', 'on' or 'auto' (as needed)
+scrollbars = 'auto'
