--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -66,3 +66,8 @@ recursion_limit = 3000
 # Set this to the file prefix of an RGB ICC working profile if you have
 # one in your ~/.ginga/profiles directory
 icc_working_profile = "sRGB"
+
+# create scroll bars in channel image viewers
+# acceptable values are: 'off', 'on' or 'auto' (as needed)
+# NOTE: overridden by channel setting of the same name, if any
+scrollbars = 'auto'
