--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ license = BSD
 url = http://ejeschke.github.com/ginga
 edit_on_github = False
 github_project = ejeschke/ginga/
-version = 2.6.5.dev
+version = 2.6.5
 keywords = scientific image viewer numpy toolkit astronomy FITS
 classifiers =
     Intended Audience :: Science/Research,
