Improvements to scrolling in new Thumbs pane
- updated key scrolling behavior in pan mode
- added pan mode key bindings for page_up, page_down, home and end
- added Thumbs key bindings for left, right, up, down arrows and
  page_up, page_down, home and end
- changed Thumbs scrolling method to use standard pan scroll not
  custom callback method
- updated FBrowser "Make Thumbs" slightly to avoid a non-thread safe
  issue

--- a/ginga/examples/configs/plugin_Thumbs.cfg
+++ b/ginga/examples/configs/plugin_Thumbs.cfg
@@ -49,3 +49,7 @@ highlight_tracks_keyboard_focus = False
 # Highlighted label colors
 label_bg_color = 'yellow'
 label_font_color = 'black'
+
+# Controls the speed of scrolling/panning in Thumbs pane
+thumb_pan_accel = 1.5
+
