Update font handling
This updates font handling in Ginga to allow more consistent handling
of fonts between widgets and ginga canvases, allows bundled fonts to
be used in the default case (with Qt back end) and makes it possible
for the user to load custom fonts.

Some minor updates for matplotlib 2.0 and the "pg" web widgets are
included.

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -3,9 +3,10 @@
 # Place this in file under ~/.ginga with the name "general.cfg"
 #
 
-# Preference for fixed and sans fonts
+# Preference for fixed, serif and sans serif fonts
 fixedFont = 'Monospace'
-sansFont = 'Sans Serif'
+serifFont = 'Times New Roman'
+sansFont = 'Arial'
 
 # Import matplotlib colormaps in addition to our own set if matplotlib
 # is installed
