Refactor doc for Colorbar, ColorMapPicker, Command, and Contents

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,4 +39,6 @@ ggrc = ginga.misc.grc:_main
 # E265: block comment should start with '#'
 # E266: too many leading '#' for block comment
 # E501: line too long
-ignore = E265,E266,E501
+# I100: import statements are in the wrong order
+# I101: imported names are in the wrong order
+ignore = E265,E266,E501,I100,I101
